added navbar and additional styling as well as a title w/ font

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <!-- <link href="https://fonts.googleapis.com/css?family=Parisienne&display=swap" rel="stylesheet"> -->
+    <!-- <link href="//db.onlinewebfonts.com/c/827708a62f4e0f867397f1e9ef08634c?family=Airbag" rel="stylesheet" type="text/css"/> -->
+    <link href="//db.onlinewebfonts.com/c/ab83b275830b2d585ea027c47e3b237a?family=GraphiqueW01-Regular" rel="stylesheet" type="text/css"/>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
